--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
+title: FLAREGUNTV
+email: help@flareguntv.com
 url: https://github.com/jeromelachaud/freelancer-theme
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
@@ -25,8 +25,8 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: #d45d45 #80B3FF
-  primary-rgb: "212, 93, 69" #"128,179,255"
+  primary: "207, 90, 67"
+  primary-rgb: "207, 90, 67"
   secondary: 2c3e50 #FD6E8A
   secondary-dark: 233140 #A2122F
 
